--- a/style.css
+++ b/style.css
@@ -133,6 +133,9 @@ select:hover,
 
 .skills {
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     min-width: 475px;
 }
 
